@@ -1,3 +1,10 @@
+2006-01-26  Samuel Thibault  <samuel.thibault@ens-lyon.org>
+
+	* linux/dev/drivers/block/ide.c (read_intr): Set the IRQ handler before
+	issuing a request.
+	(write_intr): Likewise.
+	(multwrite_intr): Likewise.
+
 2006-01-26  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* i386/linux/Makefile.in: Automatically recreate the `Makefile'.
